# testbedimage-tool

./: .gitignore  .pre-commit-config.yaml  Jenkinsfile  README.md  pyproject.toml
docs/source/: conf.py  config.rst  delete.rst  deploy.rst  import.rst  index.rst  installation.rst  list.rst  manifest.rst
docs/source/images/: Deploy_Images.drawio  Import_Images.drawio  List_Images.drawio  Print_Manifest.drawio
src/testbedimage/: __main__.py  cli.py  config.py  httpclient.py  imageserver.py  manifest.py  metadata.py  sftpclient.py  testbedexception.py  testbedimage.py
src/testbedimage.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
